--- a/code/WebApp/WebApp/Components/SubComponents/PriceChart.razor
+++ b/code/WebApp/WebApp/Components/SubComponents/PriceChart.razor
@@ -1,7 +1,7 @@
 ﻿@rendermode InteractiveServer
 
 <!-- In deiner Blazor-Komponente -->
-<div>
+<div class="chart-container" style="position: relative; height:40vh; width:50vw">
     <canvas id="@Name"></canvas>
 </div>
 
