feat: added Pagetitles to all the pages

--- a/code/WebApp/WebApp/Components/Pages/Account/AccessDenied.razor
+++ b/code/WebApp/WebApp/Components/Pages/Account/AccessDenied.razor
@@ -1,5 +1,7 @@
 ﻿@page "/access-denied"
 
+<PageTitle>IeCAG - Access Denied</PageTitle>
+
 <div clas="row">
     <div class="col-12">
         <div class="card">
