--- a/code/WebApp/WebApp/Components/Pages/Account/Logout.razor
+++ b/code/WebApp/WebApp/Components/Pages/Account/Logout.razor
@@ -2,6 +2,8 @@
 @using Microsoft.AspNetCore.Authentication
 @inject NavigationManager navigationManager
 
+<PageTitle>IeCAG - Logout</PageTitle>
+
 <div clas="row">
     <div class="col-12">
         <div class="card">
