--- a/code/WebApp/WebApp/Components/Pages/Account/Registration.razor
+++ b/code/WebApp/WebApp/Components/Pages/Account/Registration.razor
@@ -6,6 +6,8 @@
 @using WebApp.Models.ViewModels
 @inject NavigationManager navigationManager
 
+<PageTitle>IeCAG - Registration</PageTitle>
+
 <div class="row">
     <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border" style="border-radius:25px">
         <EditForm Model="@Model" OnValidSubmit="RegisterUser" FormName="RegisterForm">
