--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -13,6 +13,8 @@
 @inject IOptions<AzureTableStorageOptions> AzureTableStorageOptions;
 @using Azure.Data.Tables;
 
+<PageTitle>IeCAG - Wallet</PageTitle>
+
 <h3>Wallet</h3>
 
 <PriceChart Name="Portfolio" pricesList="priceList" @ref="priceChart" />
