--- a/code/WebApp/WebApp/Components/Layout/NavMenu.razor
+++ b/code/WebApp/WebApp/Components/Layout/NavMenu.razor
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Cryptocurrencies</a>
+                    <a class="nav-link" aria-current="page" href="">Cryptocurrencies</a>
                 </li>
                 <li class="nav-item">
                     <AuthorizeView Roles="Administrator, User">
