--- a/code/WebApp/WebApp/Components/Pages/Home.razor
+++ b/code/WebApp/WebApp/Components/Pages/Home.razor
@@ -45,7 +45,7 @@
 
         // Verbindung zu Azure Table Storage herstellen
         var serviceClient = new TableServiceClient(new Uri(options.TableEndpoint), new TableSharedKeyCredential(options.AccountName, options.AccountKey));
-        var tableClient = serviceClient.GetTableClient("CurrentPrices");
+        var tableClient = serviceClient.GetTableClient("currentprice");
 
         // Lade alle Einträge aus der Tabelle
         await foreach (var entity in tableClient.QueryAsync<TableEntity>())
@@ -53,7 +53,7 @@
             priceEntries.Add(new PriceEntry
                 {
                     Name = entity.PartitionKey,
-                    Price = (decimal?)entity["Price"]
+                    Price = Convert.ToDecimal(entity["Price"])
                 });
         }
         */
