--- a/code/WebApp/WebApp/Components/Layout/NavMenu.razor
+++ b/code/WebApp/WebApp/Components/Layout/NavMenu.razor
@@ -9,18 +9,18 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="">Cryptocurrencies</a>
+                    <a class="nav-link @(() => CheckIfActive("Cryptocurrencies"))" aria-current="page" @onclick='(() => SetActive("Cryptocurrencies"))' href="">Cryptocurrencies</a>
                 </li>
                 <li class="nav-item">
                     <AuthorizeView Roles="Administrator, User">
                         <NotAuthorized>
                             <li class="nav-item">
-                                <a class="nav-link" href="/login">Wallet</a>
+                                <a class="nav-link" @onclick='(() => SetActive("Login"))' href="/login">Wallet</a>
                             </li>
                         </NotAuthorized>
                         <Authorized>
                             <li class="nav-item">
-                                <a class="nav-link" href="wallet">Wallet</a>
+                                <a class="nav-link @(() => CheckIfActive("Wallet"))" @onclick='(() => SetActive("Wallet"))' href="/wallet">Wallet</a>
                             </li>
                         </Authorized>
                     </AuthorizeView>
@@ -43,15 +43,15 @@
                 <AuthorizeView>
                     <NotAuthorized>
                         <li class="nav-item">
-                            <a class="nav-link" href="/login">Login</a>
+                            <a class="nav-link @(() => CheckIfActive("Login"))" @onclick='(() => SetActive("Login"))' href="/login">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/register">Register</a>
+                            <a class="nav-link @(() => CheckIfActive("Register"))" @onclick='(() => SetActive("Register"))' href="/register">Register</a>
                         </li>
                     </NotAuthorized>
                     <Authorized>
                         <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
+                            <a class="nav-link @(() => CheckIfActive("Logout"))" @onclick='(() => SetActive("Logout"))' href="/logout">Logout</a>
                         </li>
                     </Authorized>
                 </AuthorizeView>
@@ -59,3 +59,25 @@
         </div>
     </div>
 </nav>
+
+@code{
+    string currentActive = "Cryptocurrencies";
+
+    private string CheckIfActive(string navItem)
+    {
+        if(currentActive == navItem)
+        {
+            return "active";
+        }
+        else
+        {
+            return "";
+        }
+        StateHasChanged();
+    }
+
+    private void SetActive(string navItem)
+    {
+        currentActive = navItem;
+    }
+}
