struc: restructured whole codebase feat: user password will be hashed and then stored in the database feat: login and registration works with Azure Data Tables feat: added UserService, which manages all the interactions with the database regarding users. feat: now we just need the ConnectionString instead of all the informations like key, name, TableEndpoint

--- a/code/WebApp/WebApp/Components/Pages/Account/Login.razor
+++ b/code/WebApp/WebApp/Components/Pages/Account/Login.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authentication.Cookies
 @using WebApp.Models.ViewModels
+@inject UserService UserService
 @inject NavigationManager navigationManager
 
 <PageTitle>IeCAG - Login</PageTitle>
@@ -49,8 +50,8 @@
 
     private async Task Authenticate()
     {
-        var userAccount = new LoginViewModel{UserName="username", Password="arlind"}; //get database userAccount
-        if(userAccount is null || userAccount.Password != Model.Password)
+        var userExists = await UserService.ValidateUserAsync(Model.UserName, Model.Password);
+        if (!userExists)
         {
             errorMessage = "Invalid User Name or Password";
             return;
@@ -59,7 +60,7 @@
         var claims = new List<Claim>
         {
             new Claim(ClaimTypes.Name, Model.UserName),
-            new Claim(ClaimTypes.Role, "Administrator")
+            new Claim(ClaimTypes.Role, "User")
         };
 
         var identity = new ClaimsIdentity(claims, CookieAuthenticationDefaults.AuthenticationScheme);
