--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -1,6 +1,6 @@
 ﻿@page "/wallet"
 @using Microsoft.AspNetCore.Authorization
-@attribute [Authorize(Roles = "Administrator,user")]
+@attribute [Authorize(Roles = "Administrator, User")]
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authentication.Cookies
@@ -10,8 +10,7 @@
 @using WebApp.Components.SubComponents;
 @implements IAsyncDisposable
 @using Microsoft.Extensions.Options;
-@inject IOptions<AzureTableStorageOptions> AzureTableStorageOptions;
-@using Azure.Data.Tables;
+
 
 <PageTitle>IeCAG - Wallet</PageTitle>
 
@@ -355,11 +354,7 @@
 
     private async Task AddTransaction()
     {
-        var options = AzureTableStorageOptions.Value;
-
-        var serviceClient = new TableServiceClient(new Uri(options.TableEndpoint), new TableSharedKeyCredential(options.AccountName, options.AccountKey));
-        var tableClientTransactions = serviceClient.GetTableClient("Transactions");
-
+        
 
     }
 
